--- a/CoalescentSaver/CoalescentSaver-Info.plist
+++ b/CoalescentSaver/CoalescentSaver-Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 Computational Evolution Group. All rights reserved.</string>
+	<string>Copyright © 2014 Arman Bilge &lt;armanbilge@gmail.com&gt;</string>
 	<key>NSPrincipalClass</key>
 	<string>CoalescentSaverView</string>
 </dict>
